@@ -77,7 +77,6 @@ struct http_io_conf {
     int                 debug;
     int                 debug_http;
     int                 quiet;
-    int                 rrs;                        // reduced redundancy storage (backward compat.)
     int                 compress;                   // zlib compression level
     int                 vhost;                      // use virtual host style URL
     u_int               *nonzero_bitmap;            // is set to NULL by http_io_create()
