@@ -822,10 +822,6 @@ Running
 .Fl \-erase
 will clear it manually.
 But see also BUGS below.
-.Pp
-.It Fl \-rrs
-Deprecated; equivalent to
-.Fl \-storageClass=REDUCED_REDUNDANCY .
 .It Fl \-size=SIZE
 Specify the size (in bytes) of the backed file to be exported by the filesystem.
 The size may have an optional suffix 'K' for kilobytes, 'M' for megabytes, 'G' for gigabytes, 'T' for terabytes, 'E' for exabytes, 'Z' for zettabytes, or 'Y' for yottabytes.
